<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="2dp"
    android:background="#f1faee"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView"
        style="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:padding="5dp"
        android:text="@string/gameOver"
        android:textColor="#e63946"
        android:textStyle="bold" />


    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toStartOf="@id/exit_score"
            android:gravity="center"
            android:text="@string/received"
            android:textColor="#1d3557" />

        <TextView
            android:id="@+id/exit_score"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="1111"
            android:textColor="#1d3557"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@id/exit_score"
            android:gravity="center"
            android:text="@string/points"
            android:textColor="#1d3557" />

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_gravity="center_horizontal"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_toStartOf="@id/exit_score"
        android:gravity="center"
        android:text="@string/answered"
        android:textColor="#1d3557" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="10dp"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/correct_number"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="1"
            android:textColor="#1d3557"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toStartOf="@id/exit_score"
            android:gravity="center"
            android:text="@string/of"
            android:textColor="#1d3557" />

        <TextView
            android:id="@+id/total_questions"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:gravity="center"
            android:text="3"
            android:textColor="#1d3557"
            android:textStyle="bold" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_toEndOf="@id/exit_score"
            android:gravity="center"
            android:text="@string/questions"
            android:textColor="#1d3557" />

    </LinearLayout>


    <TextView
        android:id="@+id/exit_trivia"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:gravity="center"
        android:padding="10dp"
        android:text="@string/greatJob"
        android:textColor="#1d3557"
        android:textStyle="italic" />

    <Button
        android:id="@+id/exit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:backgroundTint="#a8dadc"
        android:text="@string/continueBtn"
        android:textColor="#1d3557" />


</LinearLayout>