<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#f1faee">


    <TextView
        android:id="@+id/logo"
        style="@style/Base.TextAppearance.AppCompat.Display4"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="0dp"
        android:layout_marginTop="6dp"
        android:gravity="center"
        android:text="@string/trivia"
        android:textColor="#e63946"
        android:textStyle="bold" />

    <TextView
        android:id="@+id/score"
        style="@android:style/TextAppearance.DeviceDefault.Large"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/logo"
        android:gravity="center"
        android:text="HIGH SCORE"
        android:textColor="#00AF7F"
        android:textStyle="bold"
        android:visibility="gone" />

    <ProgressBar
        android:id="@+id/loader"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/score"
        android:layout_marginBottom="10dp"
        android:indeterminate="true"
        android:indeterminateTint="#00AF7F"
        android:visibility="invisible" />

    <LinearLayout
        android:id="@+id/button_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@id/loader"
        android:orientation="vertical"
        android:weightSum="7">

        <EditText
            android:id="@+id/editTextTextPersonName2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:ems="10"
            android:inputType="textPersonName"
            android:text="@string/enterName"
            android:layout_marginLeft="250px" />

        <ListView
            android:id="@+id/listView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            />
    </LinearLayout>

    <Button
        android:id="@+id/directions"
        android:layout_width="157dp"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="49dp"
        android:layout_marginTop="-3dp"
        android:backgroundTint="#a8dadc"
        android:textColor="#457b9d"
        android:onClick="displayAlert"
        android:text="@string/HTPButton" />

    <Button
        android:id="@+id/credits"
        android:layout_width="157dp"
        android:layout_height="37dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_marginStart="220dp"
        android:layout_marginTop="-3dp"
        android:backgroundTint="#a8dadc"
        android:textColor="#457b9d"
        android:onClick="displayToast"
        android:text="@string/creditButton" />


</RelativeLayout>